planespotter/04-front-end.deployment.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: planespotter-frontend
  namespace: planespotter
  labels:
    app: planespotter-frontend
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: planespotter-frontend
  template:
    metadata:
      labels:
        app: planespotter-frontend
        tier: frontend
    spec:
      containers:
      - name: planespotter-fe
        image: yfauser/planespotter-frontend #:b0a8b3186c3c18fd23632cf45ff7504b23e7c5b9
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: planespotter-frontend
  namespace: planespotter
  labels:
    app: planespotter-frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: planespotter-frontend
---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: planespotter-frontend
#   namespace: planespotter
# spec:
#   rules:
#   - host: planespotter.pks.ragazzilab.com
#     http:
#       paths:
#       - backend:
#           serviceName: planespotter-frontend
#           servicePort: 80
