planespotter/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: planespotter
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: planespotter-ing-to-fe
  namespace: planespotter
spec:
  podSelector:
    matchLabels:
      app: planespotter-frontend
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 100.64.160.11/32
      ports:
      - protocol: TCP
        port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: planespotter-fe-to-app
  namespace: planespotter
spec:
  podSelector:
    matchLabels:
      app: planespotter-app
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: planespotter-frontend
      ports:
      - protocol: TCP
        port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: planespotter-app-to-redis
  namespace: planespotter
spec:
  podSelector:
    matchLabels:
      app: redis-server
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: planespotter-app
      ports:
      - protocol: TCP
        port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: planespotter-adsb-to-redis
  namespace: planespotter
spec:
  podSelector:
    matchLabels:
      app: redis-server
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: adsb-sync
      ports:
      - protocol: TCP
        port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql
  namespace: planespotter
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: planespotter-app
      ports:
      - protocol: TCP
        port: 3306
